# llm-gateway

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  pyproject.toml  run-cpu.sh  run-gpu.sh  server.py
docker/: entrypoint-cpu.sh  entrypoint-gpu.sh
docs/: Models-access-guideline.md
src/llm_gateway/: __init__.py  anthropic_llm.py  llamacpp_llm.py  llm.py  llmabc.py  llms.py  openai_llm.py  session.py  transformer_llm.py  utils.py
test/: test_anthropic_chat.py  test_codegen_completion.py  test_codellama_completion.py  test_codellama_infilling.py  test_codellama_instruct.py  test_large_model_quant.py  test_llama3_quant.py  test_llama_completion.py  test_mistral_completion.py  test_mistral_instruct.py  test_mixtral_instruct.py  test_openai_chat.py  test_phi3_instruct.py  test_starcoder_completion.py  test_starcoder_infilling.py  test_yi_chat.py
